objects/ALTF__Account_Manager_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control certain aspects of Account Manager behavior.</description>
    <fields>
        <fullName>ALTF__AM_Account_Custom_Naming__c</fullName>
        <description>API name of the Account field that will be used to name Accounts in Account Manager.</description>
        <inlineHelpText>API name of the Account field that will be used to name Accounts in Account Manager.</inlineHelpText>
        <label>AM Account Custom Naming</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_CRUD_Search_View__c</fullName>
        <defaultValue>&quot;ALTF__Altify_Accounts_CRUD_Search&quot;</defaultValue>
        <inlineHelpText>This field specifies the API name of the account list view that determines the available advanced search options and search result columns when you&apos;re adding accounts to an account plan.</inlineHelpText>
        <label>Account CRUD Search View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Parent_Field__c</fullName>
        <defaultValue>&quot;ParentId&quot;</defaultValue>
        <inlineHelpText>This field specifies the API name of the parent look up field on the Account object.</inlineHelpText>
        <label>Account Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan_Public_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the Organization-Wide Sharing setting for the Account Manager Plan object has been set to Public Read Only</description>
        <inlineHelpText>Specifies if the Organization-Wide Sharing setting for the Account Plan object has been set to Public Read Only</inlineHelpText>
        <label>Account Manager Plan Public Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Auto_Post_Chat_Recurrence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Auto Chat Plan Performance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Buying_Structure_CRUD_Search_View__c</fullName>
        <defaultValue>&quot;ALTF__Altify_Accounts_CRUD_Search&quot;</defaultValue>
        <inlineHelpText>This field specifies the API name of the account list view that determines the available advanced search options and search result columns when you&apos;re configuring the buying structure.</inlineHelpText>
        <label>Buying CRUD Search View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Batch_Size__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Completeness Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Bus_Obj_Types__c</fullName>
        <description>The Objective Types considered by the Completeness Calculations are now configurable</description>
        <inlineHelpText>The Objective Types considered by the Completeness Calculations are now configurable</inlineHelpText>
        <label>Completeness - Business Dev Objtve Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Rel_Obj_Types__c</fullName>
        <description>The Objective Types considered by the Completeness Calculations are now configurable</description>
        <inlineHelpText>The Objective Types considered by the Completeness Calculations are now configurable</inlineHelpText>
        <label>Completeness - Relationship Objtve Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Rev_Obj_Types__c</fullName>
        <description>The Objective Types considered by the Completeness Calculations are now configurable</description>
        <inlineHelpText>The Objective Types considered by the Completeness Calculations are now configurable</inlineHelpText>
        <label>Completeness - Revenue Objective Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Account_Plan_Task_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable the logging of Account Plan Task updates.</inlineHelpText>
        <label>Disable Account Manager Task Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Competitor_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable competitor creation</description>
        <inlineHelpText>Disable competitor creation</inlineHelpText>
        <label>Disable competitor creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Navigation_Tooltips__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to remove tooltips from Account Manager navigation tabs.</description>
        <inlineHelpText>Select this checkbox to remove tooltips from Account Manager navigation tabs.</inlineHelpText>
        <label>Disable Navigation Tooltips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Qualify_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is deprecated and is no longer used.</description>
        <inlineHelpText>Setting this to true will disable the qualify link on the potential tab of the Opportunity Map intersection dialog in AM.</inlineHelpText>
        <label>Disable Qualify Link (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_Flat_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is selected then accounts will not be bubbled up to their parents.</inlineHelpText>
        <label>Flat Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_Third_Party_Segmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected, the Segmentation indicator on the Opportunity Map takes its value from an Account custom field, so that a third-party source can be used for the Segmentation value. (See the Third-Party Segmentation Field custom setting.)Segmentation Field custom setting.)</description>
        <inlineHelpText>When this checkbox is selected, the Segmentation indicator on the Opportunity Map takes its value from an Account custom field, so that a third-party source can be used for the Segmentation value. (See the Third-Party Segmentation Field custom setting.)</inlineHelpText>
        <label>Enable Third-Party Segmentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_User_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is selected, opportunities are shown in the user&apos;s currency on the account plan.</inlineHelpText>
        <label>Display Opps in user&apos;s currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Hide_Default_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Default Objectives With No Actions</description>
        <inlineHelpText>Hide all the default [Unassigned Actions] objectives from Objectives page which do not have any related actions</inlineHelpText>
        <label>Hide default objectives with no actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Hide_Legacy_Divisions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide the legacy division, from the migration, on all Account Manager pages</description>
        <inlineHelpText>Hide the legacy division, from the migration, on all Account Manager pages</inlineHelpText>
        <label>Hide Legacy Divisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Opp_Amount_Field__c</fullName>
        <description>Use this field to specify a custom currency field for opportunities instead of the standard currency amount.</description>
        <inlineHelpText>Use this field to specify a custom currency field for opportunities instead of the standard currency amount.</inlineHelpText>
        <label>Opp Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opp_Product_Amount_Field__c</fullName>
        <description>If you are using ProductLine Splits and have an Opp Amount Field configured, set this to the API Name of a custom amount field on the Opportunity Product. Refer to admin guide.</description>
        <inlineHelpText>If you are using ProductLine Splits and have an Opp Amount Field configured, set this to the API Name of a custom amount field on the Opportunity Product. Refer to admin guide.</inlineHelpText>
        <label>Opp Product Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_CRUD_Search_View__c</fullName>
        <defaultValue>&quot;ALTF__Altify_Opportunities_CRUD_Search&quot;</defaultValue>
        <description>Set the default view name for the CRUD search dialog to use when searching for opportunities. Normally, this is  ‘ALTF__Altify_Opportunities_CRUD_Search&apos;.</description>
        <inlineHelpText>This field specifies the API name of the opportunity list view that determines the available advanced search options and search result columns when you&apos;re adding opportunities to the opportunity map.</inlineHelpText>
        <label>Opportunity CRUD Search View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Review_Presenter_Process_Image_Url__c</fullName>
        <description>This field holds a url for an image that defines the Presenters Plan Review process.</description>
        <inlineHelpText>This field holds a url for an image that defines the Presenters Plan Review process.</inlineHelpText>
        <label>Plan Review Presenter Process Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Review_Process_Image_Url__c</fullName>
        <description>This setting holds a url to an image which defines the T&amp;I process

This image is shown on the welcome page of the T&amp;I</description>
        <inlineHelpText>This setting holds a url to an image which defines the T&amp;I process

This image is shown on the welcome page of the T&amp;I</inlineHelpText>
        <label>Plan Review Process Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Review_Reviewer_Process_Image_Url__c</fullName>
        <description>This field holds a url for an image that defines the Reviewers Plan Review process.</description>
        <inlineHelpText>This field holds a url for an image that defines the Reviewers Plan Review process.</inlineHelpText>
        <label>Plan Review Reviewer Process Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Overview__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting is deprecated and is no longer used.</description>
        <inlineHelpText>This setting is deprecated and is no longer used.</inlineHelpText>
        <label>Show Overview (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Test_and_Improve__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting is deprecated and is no longer used.</description>
        <inlineHelpText>This setting is deprecated and is no longer used.</inlineHelpText>
        <label>Show Test and Improve (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Unit_Custom_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uncheck this box and the custom row list will not be shown.</description>
        <inlineHelpText>This field controls whether or not the Plan Row List Dropdown is shown on the Opp Map page.</inlineHelpText>
        <label>Show Row Custom List (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr10__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr1__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr2__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Third_Party_Segmentation_Custom_Field__c</fullName>
        <description>The API name of an Account custom field that can be used to specify an account’s Segmentation value from a third-party source. (See the Enable Third-Party Segmentation custom setting.) The field can be a String, Number, Picklist, or Formula.</description>
        <inlineHelpText>The API name of an Account custom field that can be used to specify an account’s Segmentation value from a third-party source. (See the Enable Third-Party Segmentation custom setting.) The field can be a String, Number, Picklist, or Formula.</inlineHelpText>
        <label>Third-Party Segmentation Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_ProductLine_Splits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Opportunities are split in AM according to Product Lines.</description>
        <inlineHelpText>This field controls whether the Opportunities are split in AM according to Product Lines.</inlineHelpText>
        <label>Use ProductLine Splits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_Quantity_In_Market_Landscape__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this setting is enabled, the Wallet and Competitors views in Opportunity Map express market share in terms of unit quantities rather than monetary values.</description>
        <inlineHelpText>When this setting is enabled, the Wallet and Competitors views in Opportunity Map express market share in terms of unit quantities rather than monetary values.</inlineHelpText>
        <label>Use Quantity In Market Landscape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_Simple_Completion_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use Simple Completion Calculations</inlineHelpText>
        <label>Use Simple Completion Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_Solution_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow grouping of Solutions into Solution Families on your Opportunity Map. Refer to the admin guide for setting up Solution Families.</description>
        <inlineHelpText>Enable this setting to allow grouping of Solutions into Solution Families on your Opportunity Map. Refer to the admin guide for setting up Solution Families.</inlineHelpText>
        <label>Use Solution Family on Opportunity Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Write_Back_Opp_Amount_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the opportunity amount be written back to the custom field</description>
        <inlineHelpText>If you have set a value in the &apos;Opp Amount Field&apos; this field should be ticked. This will mean that when you qualify a potential opportunity its amount value will be saved to the custom Opp Amount Field you have set.</inlineHelpText>
        <label>Write Back Opp Amount Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Account Manager Settings</label>
</CustomObject>